fully removing prepare

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stripe/stripe-react-native",
-  "version": "0.1.4-phorest",
+  "version": "0.1.4-phorest-exp-1",
   "author": "Stripe",
   "description": "Stripe SDK for React Native",
   "main": "lib/commonjs/index",
@@ -21,7 +21,6 @@
     "test": "jest",
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\" --ignore-pattern \"docs/api-reference/*\"",
-    "prepare:manual": "bob build",
     "release": "./scripts/publish",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
